# pulse

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  FIXME-TASKS.md  FIXME.md  MIGRATION.md  README.md  docker-compose.external.yaml  docker-compose.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  user-installed-packages.txt
apps/webhook/: .coverage-baseline.txt  .dockerignore  .env.example  .env.test  .gitignore  .test-count-baseline.txt  Dockerfile  IMPLEMENTATION_NOTES.md  Makefile  README.md  TIMING_MIDDLEWARE_IMPLEMENTATION_PLAN.md  WORKER_README.md  config.py  docker-compose.yaml  main.py  pyproject.toml  verify_content_processor.py  worker.py  worker_thread.py
apps/webhook/.stubs/: rank_bm25.pyi
apps/webhook/alembic/: env.py
apps/webhook/alembic/versions/: 04f2514440fd_add_scraped_content_table.py  20251109_100516_add_webhook_schema.py  20251110_000000_add_change_events.py  20251113_add_foreign_keys.py  20251115_create_scrape_cache_table.py  376d1cbc1ea8_add_foreign_key_crawl_id.py  3a4d9b64ac20_add_crawl_id_to_operation_metrics.py  413191e2eb2c_create_crawl_sessions_table.py  57f2f0e22bad_add_timing_metrics_tables.py  d4a3f655d912_add_crawl_sessions_table.py
apps/webhook/api/: __init__.py  deps.py
apps/webhook/api/middleware/: timing.py
apps/webhook/api/routers/: content.py  external_stats.py  firecrawl_proxy.py  health.py  indexing.py  metrics.py  plugin_indexing.py  scrape.py  search.py  webhook.py
apps/webhook/api/schemas/: __init__.py  content.py  health.py  indexing.py  metrics.py  scrape.py  search.py  webhook.py
apps/webhook/app/: __init__.py  config.py  main.py  models.py  rate_limit.py  worker.py  worker_thread.py
apps/webhook/app/api/: dependencies.py  metrics_routes.py  routes.py
apps/webhook/app/clients/: __init__.py  changedetection.py
apps/webhook/app/jobs/: __init__.py  rescrape.py
apps/webhook/app/middleware/: timing.py
apps/webhook/app/models/: __init__.py  timing.py
apps/webhook/app/services/: auto_watch.py  bm25_engine.py  embedding.py  indexing.py  search.py  vector_store.py  webhook_handlers.py
apps/webhook/app/utils/: logging.py  text_processing.py  timing.py  url.py
apps/webhook/clients/: __init__.py  changedetection.py
apps/webhook/docs/: API_REFERENCE.md  BATCH_WORKER.md  FIRECRAWL_BRIDGE.md  LANGUAGE_PATTERNS.md  OPENAPI_README.md  TASK-11-COMPLETION-SUMMARY.md  manual-testing-timing-middleware.md  openapi.json  openapi.yaml  verification-timing-middleware-2025-11-08.md
apps/webhook/docs/plans/: 2025-11-07-timing-middleware.md
apps/webhook/domain/: models.py
apps/webhook/infra/: database.py  db.py  rate_limit.py  redis.py
apps/webhook/plugins/: DEVELOPMENT_GUIDE.md  README.md  __init__.py  base.py  firecrawl.py  reddit.py  registry.py  rss.py  youtube.py
apps/webhook/scripts/: setup-test-db.sh
apps/webhook/services/: auto_watch.py  bm25_engine.py  content_cache.py  content_processor.py  content_storage.py  crawl_session.py  embedding.py  indexing.py  plugin_ingestion.py  scrape_cache.py  search.py  service_pool.py  vector_store.py  webhook_handlers.py
apps/webhook/stubs/: rank_bm25.pyi
apps/webhook/tests/: __init__.py  conftest.py
apps/webhook/tests/api/: test_external_stats.py  test_http_client.py
apps/webhook/tests/fixtures/: stub_tokenizer.json
apps/webhook/tests/integration/: test_api.py  test_auto_watch_integration.py  test_batch_worker_e2e.py  test_bidirectional_e2e.py  test_changedetection_e2e.py  test_changedetection_webhook.py  test_chunking.py  test_connection_pool.py  test_content_api.py  test_crawl_lifecycle.py  test_end_to_end.py  test_metrics_api.py  test_middleware_integration.py  test_scrape_endpoint.py  test_webhook_content_storage.py  test_webhook_integration.py  test_webhook_optimizations.py  test_worker_crawl_id.py  test_worker_integration.py
apps/webhook/tests/security/: __init__.py  test_dos_protection.py  test_hmac_timing.py  test_sql_injection.py
apps/webhook/tests/services/: test_search_async.py
apps/webhook/tests/unit/: test_api_dependencies.py  test_api_routes.py  test_auth_timing.py  test_auto_watch.py  test_bm25_engine.py  test_bm25_no_reload.py  test_change_events_schema.py  test_changedetection_client.py  test_config.py  test_config_changedetection.py  test_config_database.py  test_config_fallback.py  test_config_job_timeout.py  test_config_validation.py  test_content_metrics.py  test_content_router.py  test_crawl_fk_constraint.py  test_crawl_session_model.py  test_database.py  test_embedding_service.py  test_foreign_keys.py  test_health_auth.py  test_indexing_service.py  test_indexing_service_crawl_id.py  test_jobs_module.py  test_logging_masking.py  test_main.py  test_metadata_helpers.py  test_metrics_schemas.py  (+27 more)
apps/webhook/utils/: content_metrics.py  logging.py  text_processing.py  time.py  timing.py  url.py
apps/webhook/workers/: __init__.py  batch_worker.py  cleanup.py  jobs.py  retention.py
(+673 files in other folders)
