[project]
name = "pulse-monorepo"
version = "0.1.0"
description = "Firecrawl Pulse monorepo - MCP server, webhook bridge, and shared packages"

[tool.uv.workspace]
members = ["apps/webhook"]

[tool.ruff]
line-length = 100
target-version = "py313"
cache-dir = ".cache/ruff"

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
cache_dir = ".cache/mypy"
mypy_path = ["apps/webhook"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
cache_dir = ".cache/pytest"

[tool.coverage.run]
data_file = ".cache/coverage/.coverage"

[tool.windsurfpyright]
typeCheckingMode = "strict"
reportMissingTypeStubs = "none"
reportUnknownVariableType = "none"
reportUnknownParameterType = "none"
reportUnknownMemberType = "none"
reportUnknownArgumentType = "none"
