[project]
name = "firecrawl-search-bridge"
version = "0.1.0"
description = "Semantic search bridge service for Firecrawl"
requires-python = ">=3.12"
authors = [
    {name = "jmagar"}
]
dependencies = [
    "fastapi>=0.121.1",
    "uvicorn[standard]>=0.38.0",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "qdrant-client>=1.15.1",
    "httpx>=0.28.1",
    "redis>=7.0.1",
    "rq>=2.6.0",
    "rank-bm25>=0.2.2",
    "structlog>=25.5.0",
    "python-multipart>=0.0.20",
    "transformers>=4.57.1",
    "torch>=2.9.0",
    "tenacity>=9.1.2",
    "slowapi>=0.1.9",
    "sqlalchemy[asyncio]>=2.0.44",
    "asyncpg>=0.30.0",
    "alembic>=1.17.1",
    "semantic-text-splitter>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "clients", "domain", "infra", "services", "utils", "workers", "alembic"]


[tool.ruff]
line-length = 100
target-version = "py313"
cache-dir = ".cache/ruff"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = [
    "E501",   # Line too long (handled by formatter)
    "N815",   # mixedCase variable in class scope (Pydantic models matching TypeScript API)
    "N803",   # Argument name should be lowercase (Pydantic models matching TypeScript API)
]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
mypy_path = [".stubs"]
cache_dir = ".cache/mypy"
exclude = [
    "data/",
    ".venv/",
    ".cache/",
    "build/",
    "dist/",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=. --cov-report=term-missing"
cache_dir = ".cache/pytest"
markers = [
    "external: requires live infrastructure (Redis, Qdrant, TEI)",
]

[tool.coverage.run]
data_file = ".cache/coverage/.coverage"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
]
